# redactkit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  oss-extraction-redaction-roadmap.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
recipes/: fastapi_middleware.py
src/redactkit/: __init__.py  core.py  url_query.py
tests/: test_extend_key_pattern.py  test_outbound_redactor.py  test_output_digest.py  test_redact_args.py  test_redact_text.py  test_summarize_payload.py  test_url_query.py
