[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redactkit"
version = "0.1.1"
description = "Production-hardened Python redaction for structured logs, LLM agent payloads, and AWS-signed URLs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "CoreNovus", email = "support@corenovus.com" }]
keywords = [
    "redaction",
    "pii",
    "logging",
    "observability",
    "security",
    "aws",
    "sigv4",
    "llm",
    "agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/CoreNovus/redactkit"
Documentation = "https://github.com/CoreNovus/redactkit#readme"
Repository = "https://github.com/CoreNovus/redactkit"
Issues = "https://github.com/CoreNovus/redactkit/issues"
Changelog = "https://github.com/CoreNovus/redactkit/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pre-commit>=3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/redactkit"]

[tool.hatch.build.targets.sdist]
include = [
    "src/redactkit",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.pyright]
include = ["src", "tests"]
strict = ["src/redactkit"]
pythonVersion = "3.10"
reportMissingImports = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
